# PolRegioGTFS

./: .gitignore  LICENSE  README.md  deno.json  polregiogtfs.sh  polregiogtfs.ts  pyproject.toml  requirements.txt  routes.csv
polregio_gtfs/: api.py  cli.py  load_station_data.py  scrape_api.py  split_bus_legs.py
src/: api.ts  csv.ts  data.ts  parser.ts
